# beat-collector

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  README_MASH.md  build.sh  dev.sh  docker-compose.yml  flake.nix  generate-entities.sh  package-lock.json  package.json  tailwind.config.js
.claude/agents/: test-coverage.md
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_artists_table.rs  m20240101_000002_create_albums_table.rs  m20240101_000003_create_tracks_table.rs  m20240101_000004_create_user_settings_table.rs  m20240101_000005_create_jobs_table.rs  m20240101_000006_create_lidarr_downloads_table.rs  m20240101_000007_create_playlists_table.rs  m20240101_000008_create_playlist_tracks_table.rs  m20240101_000009_add_album_source_column.rs  m20240101_000010_add_playlist_is_synthetic.rs  m20240101_000011_add_playlist_owned_count.rs
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  test_utils.rs
src/db/: enums.rs  mod.rs
src/db/entities/: album.rs  albums.rs  artist.rs  artists.rs  job.rs  jobs.rs  lidarr_download.rs  lidarr_downloads.rs  mod.rs  playlist_tracks.rs  playlists.rs  prelude.rs  track.rs  tracks.rs  user_settings.rs
src/db/repositories/: mod.rs
src/handlers/: albums.rs  artists.rs  auth.rs  health.rs  html.rs  jobs.rs  lidarr.rs  mod.rs  playlists.rs  settings.rs
src/jobs/: executor.rs  mod.rs  queue.rs
src/services/: cache.rs  lidarr.rs  mod.rs  musicbrainz.rs  playlist_stats.rs  spotify.rs
src/tasks/: cover_art.rs  filesystem_scan.rs  filesystem_watcher.rs  mod.rs  musicbrainz_match.rs  spotify_sync.rs
src/templates/: components.rs  layout.rs  mod.rs  pages.rs
styles/: input.css
tests/: albums_handler_test.rs  database_tests.rs  jobs_handler_test.rs  settings_handler_test.rs
